--- a/CryptoAlgorithms1/CryptoAlgorithms1.vcxproj
+++ b/CryptoAlgorithms1/CryptoAlgorithms1.vcxproj
@@ -149,10 +149,12 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="AESCBCUtils.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="AESCBCUtils.cpp" />
     <ClCompile Include="CryptoAlgorithms1.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
