added ecb detection

--- a/ECBAnalyst/ECBAnalyst.vcxproj.filters
+++ b/ECBAnalyst/ECBAnalyst.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClInclude Include="targetver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="AnalystUtils.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ECBAnalyst.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="AnalystUtils.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
